2007-02-21  Aaron Bockover  <abock@gnome.org>

	* build/m4/banshee/dbus.m4:
	* build/Common.Makefile:
	* ext/dbus-sharp/Makefile.am:
	* configure.ac: Patch from Sebastian Dröge to allow linking against an
	external installation of NDesk DBus (BGO #409964)

2007-02-20  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Widgets/VolumeButton.cs: Do not show the slider dock
	when scrolling on the volume button; stop the scroll signal emission 
	in event-after to keep the tooltip showing (and reflecting the updated
	volume level) as the scroll happens, like the panel applet volume button

2007-02-20  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Base/Banshee.AudioProfiles.Gui/TextViewLabel.cs: A 
	GtkTextView that acts and looks more like a GtkLabel - but it has nice
	word wrapping

	* src/Core/Banshee.Base/Banshee.AudioProfiles.Gui/ProfileConfigurationDialog.cs:
	Make the dialog resizable in the X direction; Use the new TextViewLabel 
	to show the description so when resizing, it can wrap properly; set a 
	good default minimum width

	* src/Core/Banshee.Base/Banshee.AudioProfiles.Gui/ProfileComboBoxConfigurable.cs:
	Use the TextViewLabel to show the description (widget is based on code
	that was written directly into ProfileComboBoxConfigurable.)

2007-02-20  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Base/Banshee.Metadata/MetadataServiceJob.cs:
	* src/Core/Banshee.Base/Banshee.Metadata/IMetadataLookupJob.cs:
	* src/Core/Banshee.Base/Banshee.Metadata/MetadataService.cs:
	* src/Core/Banshee.Base/Banshee.Metadata/IMetadataProvider.cs:
	* src/Core/Banshee.Base/Banshee.Metadata/BaseMetadataProvider.cs:
	* src/Core/Banshee.Base/Banshee.Base.mdp:
	* src/Core/Banshee.Base/Banshee.Metadata.Rhapsody/RhapsodyMetadataProvider.cs:
	* src/Core/Banshee.Base/Banshee.Metadata.Rhapsody/RhapsodyQueryJob.cs:
	* src/Core/Banshee.Base/Banshee.Metadata.Embedded/EmbeddedMetadataProvider.cs:
	* src/Core/Banshee.Base/Banshee.Metadata.Embedded/EmbeddedQueryJob.cs: